syntax = "proto3";

option java_package = "com.lolcampselector.grpc";

service Chatbot {

  // Sends user's text input to the server
  rpc send_message(Message) returns (chatbotResponse);

  // Request a champion's ability, it returns
  rpc getChampionAbility(championAbilityRequest) returns (Message);

}

// Simple message
message Message {

    string message = 1;

}

// Request a champion's ability
message championAbilityRequest {

    string champion = 1;
    string ability = 2;

}

// Chatbot response
message chatbotResponse {

    string message = 1;
    string champion = 2;

}